@startuml Node Layer - Interface View

interface IClientConfiguration {
    + {abstract} getTransportType(): TransportType
    + {abstract} setTransportType(transportType: TransportType): Void
    + {abstract} getConnectionTimeout(): Integer
    + {abstract} setConnectionTimeout(connectionTimeout: Integer): Void
    + {abstract} getKeepConnectionAlive(): Boolean
    + {abstract} setKeepConnectionAlive(keepConnectionAlive: Boolean): Void
    + {abstract} getBufferSize(): Integer
    + {abstract} setBufferSize(bufferSize: Integer): Void
}

interface IClientSubscriber {
    + {abstract} onConnection(connection: IConnection): Void
}

interface IClient {
    + {abstract} getConfiguration(): IClientConfiguration
    + {abstract} addSubscriber(subscriber: IClientSubscriber): Boolean
    + {abstract} removeSubscriber(subscriber: IClientSubscriber): Boolean
    + {abstract} connect(address: String, port: Integer): Boolean
    + {abstract} disconnect(): Boolean
    + {abstract} send(connectionId: ConnectionId, data: Byte[*]): Boolean
    + {abstract} closeConnection(connectionId: ConnectionId): Boolean
}

interface IServerConfiguration {
    + {abstract} getTransportType(): TransportType
    + {abstract} setTransportType(transportType: TransportType): Void
    + {abstract} getMaximumConnections(): Integer
    + {abstract} setMaximumConnections(maximumConnections: Integer): Void
    + {abstract} getMaximumRequestsPerSecond(): Integer
    + {abstract} setMaximumRequestsPerSecond(maximumRequestsPerSecond: Integer): Void
    + {abstract} getBufferSize(): Integer
    + {abstract} setBufferSize(bufferSize: Integer): Void
}

interface IServerSubscriber {
    + {abstract} onConnection(connection: IConnection): Void
}

interface IServer {
    + {abstract} getConfiguration(): IServerConfiguration
    + {abstract} addSubscriber(subscriber: IServerSubscriber): Boolean
    + {abstract} removeSubscriber(subscriber: IServerSubscriber): Boolean
    + {abstract} start(address: String, port: Integer): Boolean
    + {abstract} stop(): Boolean
    + {abstract} send(connectionId: ConnectionId, data: Byte[*]): Boolean
    + {abstract} closeConnection(connectionId: ConnectionId): Boolean
}

interface INodeFactory {
    + {abstract} createClientConfiguration(): IClientConfiguration
    + {abstract} createClient(configuration: IClientConfiguration): IClient
    + {abstract} createServerConfiguration(): IServerConfiguration
    + {abstract} createServer(configuration: IServerConfiguration): IServer
}


IClient ..> IClientConfiguration
IClient ..> IClientSubscriber
IClient <.. INodeFactory

IServer ..> IServerConfiguration
IServer ..> IServerSubscriber
IServer <.. INodeFactory

IClientConfiguration <.. INodeFactory

IServerConfiguration <.. INodeFactory

@enduml
